--- a/src/app/admin/components/nav/nav.component.html
+++ b/src/app/admin/components/nav/nav.component.html
@@ -20,7 +20,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>SERALSE DASHBOARD</span>
+      <span> DASHBOARD</span>
     </mat-toolbar>
     <!-- Add Content Here -->
     <router-outlet></router-outlet>
