--- a/src/app/admin/components/basic-form/basic-form.component.html
+++ b/src/app/admin/components/basic-form/basic-form.component.html
@@ -1,220 +1,37 @@
-<!-- <form [formGroup]="form" (ngSubmit)="save($event)">
-
-  <div>
-    <input type="text"
-    formControlName="name"
-    [class.is-valid]=" isNameFieldValid"
-    [class.is-invalid]="isNameFieldInvalid"/>
-    &nbsp;
-    <button [disabled]="nameField.valid" (click)="getNameValue()">Ver valor</button>
-    <b>nombre{{form.get('name').value}} valido o no {{nameField.invalid}} </b>
-    <br>
-     <div class="messages" [class.active]="nameField.touched">
-      <strong  *ngIf="nameField.touched && nameField.hasError('required') || nameField.hasError('maxLength') || nameField.hasError('minLength') || nameField.hasError('pattern') ">Este campo es requerido <br> Este campo tines que tener minimo 2 caracteres <br> Este campo tines que tener maximo 10 caracteres</strong>
-    </div>
-    <div *ngIf="nameField.touched && nameField.hasError('required') ">CAMPO REQUERDIO</div>
-    <div *ngIf=" nameField.hasError('maxLength')"> maximo permitido superado ALERTA</div>
-    <div *ngIf=" nameField.hasError('min')"> maximo permitido superado ALERTA</div>
-    <div *ngIf=" nameField.hasError('pattern')"> maximo permitido superado ALERTA</div>
-    <code>
-      <pre>
-        {{nameField | json}}
-      </pre>
-    </code>
-  </div>
-
-  <div>
-    <input type="email" formControlName="email"/>
-    &nbsp;
-    <span> Email: {{emailField.value}} </span>
-    <br>
-    <div class="messages" [class.active]="emailField.touched">
-      <strong *ngIf="emailField.touched && emailField.hasError('required') &&  emailField.hasError('email') ">Este campo es requerido <br> Este campo tines que revisarlo</strong>
-    </div>
-    <i>asi vemos la propiedades del formControl email </i>
-    <code>
-    <pre>
-    <!--   {{emailField | json}}
-    </pre>
-  </code>
-  </div>
-
-  <div>
-    <input type="number" formControlName="phone"/>
-    &nbsp;
-    <button>Ver valor</button>
-    <br>
-    <div class="messages" [class.active]="isNameFieldInvalid">
-      <strong  *ngIf="phoneField.touched && phoneField.hasError('required')">Este campo es requerido  Este campo tines que revisarlo</strong>
-    </div>
-    Phone: {{phoneField.value}}
-    <br>
-    <i>asi vemos la propiedades del formControl tel </i>
-    <code>
-    <pre>
-    <!--   {{phoneField | json}}
-    </pre>
-  </code>
-  </div>
-
-
-  <div>
-    <input type="color" formControlName="color" />
-    &nbsp;
-    <button>Ver valor</button>
-    Color: {{colorField.value}}
-    <i>asi vemos la propiedades del formControl color </i>
-    <code>
-    <pre>
-      <!-- {{colorField | json}}
-    </pre>
-  </code>
-  </div>
-
-  <div>
-    <select formControlName="category">
-      <option value="category-1">category</option>
-      <option value="category-2">category</option>
-      <option value="category-3">category</option>
-      <option value="category-4">category 👽</option>
-      <option value="category-5">category</option>
-      <option value="category-6">category</option>
-    </select>
-    &nbsp;
-    <button>Ver valor</button>
-    Select: {{categoryField.value}}
-    <i>asi vemos la propiedades del formControl color </i>
-    <code>
-    <pre>
-<!--   {{colorField | json}}
-    </pre>
-  </code>
-  </div>
-
-  <div>
-    <select formControlName="tag" multiple>
-      <option value="tag-1">tagField</option>
-      <option value="tag-2">categotagFieldry</option>
-      <option value="tag-3">tagField</option>
-      <option value="tag-4">catetagFieldgory 👽</option>
-      <option value="tag-5">cattagFieldegory</option>
-      <option value="tag-6">cattagFieldegory</option>
-    </select>
-    &nbsp;
-    <button>Ver valor</button>
-    Select: {{tagField.value}}
-    <i>asi vemos la propiedades del formControl color </i>
-    <code>
-     <pre>
-       <!-- {{colorField | json}}
-     </pre>
-   </code>
-  </div>
-
-  <div>
-    <input type="checkbox" formControlName="agree">
-    &nbsp;
-    <button>Ver valor</button>
-    agre: {{agreeField.value}}
-    <i>asi vemos la propiedades del formControl checkbox </i>
-    <code>
-     <pre>
-       <!-- {{colorField | json}}
-     </pre>
-   </code>
-  </div>
-
-  <div>
-    <label >male</label>
-    <input name="gender" type="radio" formControlName="gender" value="male">
-    <label >famale</label>
-    <input  name="gender" type="radio" formControlName="gender" value="famale">
-    <label >other</label>
-    <input  name="gender" type="radio" formControlName="gender" value="other" >
-    &nbsp;
-    <button>Ver valor</button>
-    agre: {{genderField.value}}
-    <i>asi vemos la propiedades del formControl radio </i>
-    <code>
-     <pre>
-       <!-- {{colorField | json}}
-     </pre>
-   </code>
-  </div>
-
-  <div>
-    <label >zona 1</label>
-    <input name="zone" type="radio" formControlName="zone" value="zona-1">
-    <label >zona 2</label>
-    <input name="zone" type="radio" formControlName="zone" value="zona-2">
-    <label >zona 3</label>
-    <input name="zone" type="radio" formControlName="zone" value="zona-3" >
-    &nbsp;
-    <button>Ver valor</button>
-    zone: {{zoneField.value}}
-    <i>asi vemos la propiedades del formControl radio </i>
-    <code>
-     <pre>
-       <!-- {{colorField | json}}
-     </pre>
-   </code>
-  </div>
-
-  <div>
-   <input type="number" formControlName="age">
-    <button>Ver valor</button>
-    age: {{ageField.value}}
-    <i>asi vemos la propiedades del formControl nymber </i>
-    <div class="messages" [class.active]="ageField.touched && ageField.invalid">
-      <strong *ngIf="ageField.touched && ageField.hasError('required') &&  ageField.hasError('min') && ageField.hasError('max') ">Este campo es requerido <br> Este campo tines que revisarlo</strong>
-    </div>
-    <code>
-     <pre>
-       <!-- {{colorField | json}}
-     </pre>
-   </code>
-  </div>
-
-  <div>
-    <button [disabled]="form.invalid" type="submit" value="Enviar" placeholder="Enviar">Enviar</button>
-  </div>
-</form> -->
-
-
 <form [formGroup]="form" (ngSubmit)="save($event)">
   <div formGroupName="fullName">
     <mat-form-field appearance="fill">
       <mat-label>Name: {{ nameField.value }}</mat-label>
       <input matInput type="text" formControlName="name">
-
-      </mat-form-field>
-    <p>
-      Name: {{ nameField.value }} {{ nameField.valid }}
-      <!-- <input [class.is-valid]="isNameFieldValid" [class.is-invalid]="isNameFieldInvalid" type="text"
-        formControlName="name" /> -->
-      <button [disabled]="nameField.invalid" (click)="getNameValue()">Get value</button>
-
-    </p>
+      <mat-icon matSuffix *ngIf="isNameFieldValid">done</mat-icon>
+      <mat-icon matSuffix *ngIf="isNameFieldInvalid">close</mat-icon>
+    </mat-form-field>
     <div class="messages" [class.active]="isNameFieldInvalid">
-      <mat-error>
-        <strong *ngIf="nameField.hasError('required')">Este cam|o es requerido</strong>
+      <mat-error *ngIf="nameField.hasError('required')">
+        Este campo es requerido
       </mat-error>
-      <mat-error>
-        <strong *ngIf="nameField.hasError('maxlength')">debe tener maximo 10 c</strong>
+      <mat-error *ngIf="nameField.hasError('maxlength')">
+        debe tener maximo 10 c
       </mat-error>
-      <mat-error>
-        <strong *ngIf="nameField.hasError('pattern')">No debe tener carac..</strong>
+      <mat-error *ngIf="nameField.hasError('pattern')">
+        No debe tener carac..
       </mat-error>
     </div>
+
     <p>
       Last Name: {{ lastField.value }} {{ lastField.valid }}
-      <input type="text" formControlName="last" />
+      <input
+        type="text"
+        formControlName="last"/>
     </p>
   </div>
+
+
   <p>
     Email: {{ emailField.value }}
-    <input type="email" formControlName="email" />
+    <input type="email" formControlName="email"/>
   </p>
+
   <div class="messages" [class.active]="emailField.touched && phoneField.invalid">
     <p>
       <strong *ngIf="emailField.hasError('required')">
@@ -227,10 +44,12 @@
       </strong>
     </p>
   </div>
+
   <p>
     Age: {{ ageField.value }}
-    <input type="number" formControlName="age" />
+    <input type="number" formControlName="age"/>
   </p>
+
   <div class="messages" [class.active]="ageField.touched && ageField.invalid">
     <p>
       <strong *ngIf="ageField.hasError('required')">Este campo es requerido</strong>
@@ -242,27 +61,34 @@
       <strong *ngIf="ageField.hasError('max')">Debe ser menor de 100 años</strong>
     </p>
   </div>
+
+
   <p>
     Phone: {{ phoneField.value }}
-    <input type="tel" formControlName="phone" />
+    <input type="tel" formControlName="phone"/>
   </p>
+
   <div class="messages" [class.active]="phoneField.touched && phoneField.invalid">
     <p>
       <strong *ngIf="phoneField.touched && phoneField.hasError('required')">Este campo es requerido</strong>
     </p>
   </div>
+
   <p>
     Color: {{ colorField.value }}
-    <input type="color" formControlName="color" />
+    <input type="color" formControlName="color"/>
   </p>
+
   <p>
     Date: {{ dateField.value }}
-    <input type="date" formControlName="date" />
+    <input type="date" formControlName="date"/>
   </p>
+
   <p>
     Phone: {{ ageField.value }}
-    <input type="number" formControlName="age" />
+    <input type="number" formControlName="age"/>
   </p>
+
   <p>
     Category: {{ categoryField.value }}
     <select formControlName="category">
@@ -272,6 +98,7 @@
       <option value="category-4">Category 4</option>
     </select>
   </p>
+
   <p>
     Tags: {{ tagField.value }}
     <select formControlName="tag" multiple>
@@ -281,41 +108,52 @@
       <option value="tag-4">Tag 4</option>
     </select>
   </p>
+
   <p>
     Agree: {{ agreeField.value }}
-    <input type="checkbox" formControlName="agree" />
+    <input type="checkbox" formControlName="agree"/>
   </p>
+
+
   <p>
     Gender: {{ genderField.value }}
     <label>
-      <input name="gender" value="male" type="radio" formControlName="gender" />
+      <input name="gender" value="male" type="radio" formControlName="gender"/>
       Male
     </label>
     <label>
-      <input name="gender" value="female" type="radio" formControlName="gender" />
+      <input name="gender" value="female" type="radio" formControlName="gender"/>
       Female
     </label>
     <label>
-      <input name="gender" value="other" type="radio" formControlName="gender" />
+      <input name="gender" value="other" type="radio" formControlName="gender"/>
       Other
     </label>
   </p>
+
   <p>
     Zone: {{ zoneField.value }}
     <label>
-      <input name="zone" value="zone-1" type="radio" formControlName="zone" />
+      <input name="zone" value="zone-1" type="radio" formControlName="zone"/>
       Zona 1
     </label>
     <label>
-      <input name="zone" value="zone-2" type="radio" formControlName="zone" />
+      <input name="zone" value="zone-2" type="radio" formControlName="zone"/>
       Zona 2
     </label>
     <label>
-      <input name="zone" value="zone-3" type="radio" formControlName="zone" />
+      <input name="zone" value="zone-3" type="radio" formControlName="zone"/>
       Zona 3
     </label>
   </p>
+
   <p>
     <button type="submit">Enviar</button>
   </p>
 </form>
+
+
+
+
+
+
